--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -41,30 +41,31 @@
           </padding>
         </StackPane>
 
-        <VBox VBox.vgrow="NEVER" styleClass="pane-with-border" minWidth="100" prefWidth="100">
-          <padding>
-            <Insets top="5" right="10" bottom="5" left="10" />
-          </padding>
-          <Label styleClass="label-bright" text="Response:"/>
-          <StackPane fx:id="resultDisplayPlaceholder" maxHeight="100" minHeight="100"
-                     prefHeight="150">
-            <padding>
-              <Insets bottom="5" top="5"/>
-            </padding>
-          </StackPane>
-        </VBox>
-
-
         <StackPane VBox.vgrow="ALWAYS" HBox.hgrow="ALWAYS">
           <HBox>
-            <StackPane HBox.hgrow="ALWAYS">
-                <VBox fx:id="tagList" minWidth="400" prefWidth="400" styleClass="pane-with-border"
+            <StackPane>
+              <VBox styleClass="pane-with-border" minWidth="300" prefWidth="300">
+                <padding>
+                  <Insets top="5" right="10" bottom="5" left="10" />
+                </padding>
+                <Label styleClass="label-bright" text="Response:"/>
+                <StackPane fx:id="resultDisplayPlaceholder" maxHeight="200" minHeight="200"
+                           prefHeight="100">
+                  <padding>
+                    <Insets bottom="5" top="5"/>
+                  </padding>
+                </StackPane>
+
+                <VBox fx:id="tagList"  styleClass="pane-with-border"
                       VBox.vgrow="ALWAYS">
                   <padding>
                     <Insets bottom="10" left="10" right="10" top="10"/>
                   </padding>
-                  <StackPane fx:id="tagListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
+
+                  <StackPane fx:id="tagListPanelPlaceholder"/>
+
                 </VBox>
+              </VBox>
             </StackPane>
 
             <StackPane HBox.hgrow="ALWAYS">
@@ -86,7 +87,10 @@
                 <StackPane fx:id="listingListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
               </VBox>
             </StackPane>
+
           </HBox>
+
+
         </StackPane>
 
         <StackPane fx:id="statusbarPlaceholder" VBox.vgrow="NEVER"/>
