--- a/src/main/resources/view/MainWindow.fxml
+++ b/src/main/resources/view/MainWindow.fxml
@@ -56,15 +56,14 @@
                   </padding>
                 </StackPane>
 
-                <VBox fx:id="tagList"  styleClass="pane-with-border"
+                <VBox fx:id="tagList" minWidth="400" prefWidth="400" styleClass="pane-with-border"
                       VBox.vgrow="ALWAYS">
                   <padding>
                     <Insets bottom="10" left="10" right="10" top="10"/>
                   </padding>
-
-                  <StackPane fx:id="tagListPanelPlaceholder"/>
-
+                  <StackPane fx:id="tagListPanelPlaceholder" VBox.vgrow="ALWAYS"/>
                 </VBox>
+                
               </VBox>
             </StackPane>
 
