--- a/src/main/resources/view/PreferenceListPanel.fxml
+++ b/src/main/resources/view/PreferenceListPanel.fxml
@@ -7,7 +7,7 @@
 <?import javafx.scene.control.Label?>
 <VBox xmlns="http://javafx.com/javafx/17" xmlns:fx="http://javafx.com/fxml/1">
   <Label styleClass="cell_big_label" text="Preference(s)"/>
-  <ListView fx:id="preferenceListView" VBox.vgrow="NEVER">
+  <ListView fx:id="preferenceListView" VBox.vgrow="NEVER" styleClass="pane-with-border">
     <padding>
       <Insets bottom="5.0" left="5.0" right="5.0" top="5.0" />
     </padding>
