--- a/src/main/resources/view/PersonListCard.fxml
+++ b/src/main/resources/view/PersonListCard.fxml
@@ -28,10 +28,12 @@
         </Label>
         <Label fx:id="name" text="\$first" styleClass="cell_big_label" />
       </HBox>
-      <FlowPane fx:id="tags" />
+      <FlowPane fx:id="personTags" />
       <Label fx:id="phone" styleClass="cell_small_label" text="\$phone" />
       <Label fx:id="email" styleClass="cell_small_label" text="\$email" />
-      <StackPane fx:id="preferenceListPanelPlaceholder" VBox.vgrow="NEVER" maxHeight="100"/>
+
+      <StackPane fx:id="preferenceListPanelPlaceholder" VBox.vgrow="NEVER" maxHeight="200"/>
+
     </VBox>
   </GridPane>
 </HBox>
