--- a/src/main/resources/view/TagListPanel.fxml
+++ b/src/main/resources/view/TagListPanel.fxml
@@ -9,7 +9,7 @@
     <Label styleClass="label-bright" text="Tags:"/>
     <FlowPane fx:id="tags" styleClass="pane-with-border" VBox.vgrow="ALWAYS">
         <padding>
-            <Insets bottom="5" top="5"/>
+            <Insets bottom="5" top="5" left="5" right="5"/>
         </padding>
     </FlowPane>
 </VBox>
