--- a/src/main/resources/view/ListingListCard.fxml
+++ b/src/main/resources/view/ListingListCard.fxml
@@ -34,6 +34,7 @@
                     <Label fx:id="houseNumber" styleClass="cell_big_label" text="\$houseNumber"/>
                     <Label fx:id="name" styleClass="cell_small_label" text="\$name"/>
                     <Label fx:id="priceRange" styleClass="cell_small_label" text="\$priceRange"/>
+                    <Label fx:id="isAvailable" styleClass="cell_small_label" text="\$isAvailable"/>
                 </VBox>
             </HBox>
             <FlowPane fx:id="tags"/>
