--- a/src/main/resources/view/DarkTheme.css
+++ b/src/main/resources/view/DarkTheme.css
@@ -4,6 +4,7 @@
     -fx-tag-color: #7097b8;
     -fx-buyer-tag-color: #9461bd;
     -fx-seller-tag-color: #bd9861;
+    -fx-active-tag-color: #3cd337;
 }
 
 .background {
@@ -359,25 +360,17 @@
     -fx-font-size: 11;
 }
 
-#personTags {
-    -fx-hgap: 7;
-    -fx-vgap: 3;
+#tags .label.active {
+    -fx-text-fill: white;
+    -fx-background-color: -fx-active-tag-color;
 }
 
-.buyer-tag {
+#tags .label.buyer {
     -fx-text-fill: white;
     -fx-background-color: -fx-buyer-tag-color;
-    -fx-padding: 1 3 1 3;
-    -fx-border-radius: 2;
-    -fx-background-radius: 2;
-    -fx-font-size: 11;
 }
 
-.seller-tag {
+#tags .label.seller {
     -fx-text-fill: white;
     -fx-background-color: -fx-seller-tag-color;
-    -fx-padding: 1 3 1 3;
-    -fx-border-radius: 2;
-    -fx-background-radius: 2;
-    -fx-font-size: 11;
 }
